[tool.poetry]
name = "link"
version = "0.1.0"
description = ""
authors = ["drax <mars@atlas.local>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
